tests/bad/deref_non_ptr.ae
/// fail: Cannot dereference non-pointer type: i32

def main() {
    let x = 5
    let y = *x
}